# ChangeLog for www-apache/mod_bw
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_bw/ChangeLog,v 1.7 2008/03/02 14:56:34 rbu Exp $

  02 Mar 2008; Robert Buchholz <rbu@gentoo.org> mod_bw-0.8.ebuild:
  stable amd64, bug 208552

  08 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org> mod_bw-0.8.ebuild:
  ppc stable, bug #208552

  07 Feb 2008; Benedikt Böhm <hollow@gentoo.org> -mod_bw-0.7.ebuild:
  remove outdated version

  03 Feb 2008; Christian Faulhammer <opfer@gentoo.org> mod_bw-0.8.ebuild:
  stable x86, bug 208552

  31 Jan 2008; Benedikt Böhm <hollow@gentoo.org> files/11_mod_bw.conf,
  metadata.xml:
  update metadata; cleanup

  29 Jul 2007; Christian Heim <phreak@gentoo.org> +files/11_mod_bw.conf,
  +metadata.xml, +mod_bw-0.7.ebuild, +mod_bw-0.8.ebuild:
  Moving net-www/mod_bw to www-apache/mod_bw (#81244).

  18 May 2007; Luca Longinotti <chtekk@gentoo.org> mod_bw-0.8.ebuild:
  Use eclass depends for this.

*mod_bw-0.8 (18 May 2007)

  18 May 2007; Christian Heim <phreak@gentoo.org> +mod_bw-0.8.ebuild:
  Version bump, adding an explicit DEPEND/RDEPEND on net-www/apache-2.2*. Also
  changing the LICENSE to Apache-2.0.

  14 Jan 2007; Luca Longinotti <chtekk@gentoo.org> -mod_bw-0.5_rc1.ebuild,
  -mod_bw-0.5.ebuild, -mod_bw-0.6.ebuild, mod_bw-0.7.ebuild:
  Cleanup.

*mod_bw-0.7 (07 Jan 2007)

  07 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> +mod_bw-0.7.ebuild:
  Version bump, fixes bug 150174.

  17 Jan 2006; <nixnut@gentoo.org> mod_bw-0.6.ebuild:
  Added ~ppc keyword. bug 119156

  18 Sep 2005; Michael Stewart <vericgar@gentoo.org> mod_bw-0.6.ebuild:
  Stable on x86

  10 Aug 2005; Luis Medinas <metalgod@gentoo.org> mod_bw-0.6.ebuild:
  Added ~amd64.

*mod_bw-0.6 (01 Mar 2005)

  01 Mar 2005; Benedikt Boehm <hollow@gentoo.org> +mod_bw-0.6.ebuild:
  Version bump

*mod_bw-0.5 (25 Feb 2005)
