@@ -1,5 +1,9 @@
 AUX 11_mod_bw.conf 422 RMD160 1e544fde6f68fc11c5f40dc1205272fa7f383446 SHA1 9bceaa6c3400174837b53ee9a34d472e3769bda1 SHA256 00d512a4bc8b97610795957f5cbcaeb5dcf27c9d2602ee10f81c90bcfe275746
 DIST mod_bw-0.8.tgz 19026 RMD160 ca2e14d9202c80f62cddc9abfb0eb2f42beffdf1 SHA1 eee7c45e06f54f143980ed61e9883d725412e28a SHA256 75d43f586b7662ccca7d67bc67c52e25a341c6caef89a4804fedbeaee25a13b3
+DIST mod_bw-0.91.tgz 23729 RMD160 ca66d134b1a8f019f2099db3c4c620ab4835633c SHA1 cb4de1d4ed362263cbc4b2f559daa8ee9932ab57 SHA256 253cbc51d976ee919e1964b4eba0ee4f5466237ae7dbec678074f73a43f443d7
+DIST mod_bw-0.92.tgz 23816 RMD160 c54bd1166bfaa28c3722376bf428397d2ea841f5 SHA1 4a7e3d27ed789dd03fb3d8f83ff856470f01d15b SHA256 658eb3f63e2181ac0b6fc3ea33f0eaf637d6ef832c7df3a0e3f3d0cd2376cd7f
 EBUILD mod_bw-0.8.ebuild 564 RMD160 e4ede62acce081106e7f9fcb4e81bda9a69b2c81 SHA1 42a1c1ab252051749a9348968285350e26ee636c SHA256 96bdd4bd37b1825f3c992f3c865d476aaf3bbee97fb73b2a940519116423b5db
-MISC ChangeLog 2213 RMD160 793c8d4bdc483ad1bf75fd01465b759e190037d2 SHA1 9cf47f48c5117a8ce65f530405456824c71867e0 SHA256 714257060b3a122396c0fc8f76a0019198a3453cfacb1e1f1d084703d32d157f
+EBUILD mod_bw-0.9.1.ebuild 579 RMD160 926791e42e034f78ce295440b6c8a6e83aacad48 SHA1 de793d80b1e9e8121738773bf41107f6c4fb0aa8 SHA256 e0f332b294a5728ca1811fa4dd2d5b744341f68555ef730541ea893e44409392
+EBUILD mod_bw-0.9.2.ebuild 579 RMD160 8985087f50bb00817096bba97d189bf98773cb84 SHA1 b58102137667f5535c3bf929476eb1081901d175 SHA256 393de86baafb56f817dfdd99ca6c5433c53054975a6640786ce266b558ee4666
+MISC ChangeLog 2436 RMD160 62e7cefd163b03d2e53346f23b66e7e8bc681e06 SHA1 f3ea93f72bfa0503d17e55bb5617b69a6d908ce8 SHA256 140754075409808076241522cbf6e2e03f81c24ca6da6b0377f34988925dbef6
 MISC metadata.xml 160 RMD160 a0f6e133e170b7477018d8584c20e8723f6914fa SHA1 a3b9b520ec43ee1f9b1c7b5c5b8745bf84454c03 SHA256 3c312146c4cb5b912d6f56292242ce3a85c629ca98ee7ef0a84ca575708b44fe
