@@ -1,6 +1,13 @@
 # ChangeLog for www-apache/mod_bw
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_bw/ChangeLog,v 1.7 2008/03/02 14:56:34 rbu Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/mod_bw/ChangeLog,v 1.8 2011/10/14 16:49:38 beandog Exp $
+
+*mod_bw-0.9.2 (14 Oct 2011)
+*mod_bw-0.9.1 (14 Oct 2011)
+
+  14 Oct 2011; Steve Dibb <beandog@gentoo.org> +mod_bw-0.9.1.ebuild,
+  +mod_bw-0.9.2.ebuild:
+  Version bumps, bug 328587; Thanks to Guido Jäkel for new ebuilds
 
   02 Mar 2008; Robert Buchholz <rbu@gentoo.org> mod_bw-0.8.ebuild:
   stable amd64, bug 208552
